<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="cz.verunka.droid.authentication.viewModel.ProfileViewModel"/>
    </data>

    <ScrollView
        android:id="@+id/profile_scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".view.ProfileFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_background_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_background_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/profile_view_space">

                <TextView
                    android:id="@+id/profile_text_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/primaryColor"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Name"/>

                <ImageView
                    android:id="@+id/profile_icon_hometown"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/pin"
                    app:layout_constraintStart_toStartOf="@id/profile_text_name"
                    app:layout_constraintTop_toBottomOf="@id/profile_text_name"/>

                <TextView
                    android:id="@+id/profile_text_hometown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/primaryColor"
                    app:layout_constraintBottom_toBottomOf="@id/profile_icon_hometown"
                    app:layout_constraintEnd_toEndOf="@id/profile_text_name"
                    app:layout_constraintStart_toEndOf="@id/profile_icon_hometown"
                    app:layout_constraintTop_toTopOf="@id/profile_icon_hometown"
                    tools:text="Hometown"/>

                <ImageView
                    android:id="@+id/profile_icon_email"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/email"
                    app:layout_constraintStart_toStartOf="@id/profile_text_name"
                    app:layout_constraintTop_toBottomOf="@id/profile_icon_hometown"/>

                <TextView
                    android:id="@+id/profile_text_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:autoLink="email"
                    android:clickable="true"
                    android:textColorLink="@color/primaryColor"
                    app:layout_constraintBottom_toBottomOf="@id/profile_icon_email"
                    app:layout_constraintEnd_toEndOf="@id/profile_text_name"
                    app:layout_constraintStart_toEndOf="@id/profile_icon_email"
                    app:layout_constraintTop_toTopOf="@id/profile_icon_email"
                    tools:text="E-mail"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile_button_github"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toStartOf="@id/profile_button_steam"
                    app:layout_constraintStart_toStartOf="@id/profile_text_name"
                    app:layout_constraintTop_toBottomOf="@id/profile_icon_email">

                    <LinearLayout
                        android:id="@+id/profile_layout_github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/profile_text_github_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryColor"
                            tools:text="GitHub Name"/>

                        <TextView
                            android:id="@+id/profile_text_github"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/github"
                            android:textColor="@color/primaryColor"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile_button_steam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="@id/profile_text_name"
                    app:layout_constraintStart_toEndOf="@id/profile_button_github"
                    app:layout_constraintTop_toBottomOf="@id/profile_icon_email">

                    <LinearLayout
                        android:id="@+id/profile_layout_steam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/profile_text_steam_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryColor"
                            tools:text="STEAM Game"/>

                        <TextView
                            android:id="@+id/profile_text_steam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/steam"
                            android:textColor="@color/primaryColor"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/profile_text_bio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/bio"
                    android:textColor="@color/primaryColor"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@id/profile_text_name"
                    app:layout_constraintStart_toStartOf="@id/profile_text_name"
                    app:layout_constraintTop_toBottomOf="@id/profile_button_steam"/>

                <TextView
                    android:id="@+id/profile_text_lorem_ipsum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="80dp"
                    android:textColor="@color/primaryColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/profile_text_name"
                    app:layout_constraintStart_toStartOf="@id/profile_text_name"
                    app:layout_constraintTop_toBottomOf="@id/profile_text_bio"
                    tools:text="@tools:sample/lorem[60]"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/profile_image_girl"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:src="@drawable/girl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/profile_view_space"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="@id/profile_image_girl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
